analyzers/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AT
    BOOL
    CLOSE_TAG
    CONCAT_EQUAL
    DIV_EQUAL
    DOUBLE
    FLOAT
    INT
    NOT
    OPEN_TAG

Grammar

Rule 0     S' -> cuerpo
Rule 1     cuerpo -> imprimir
Rule 2     cuerpo -> asignacion
Rule 3     cuerpo -> asignacion_array
Rule 4     cuerpo -> funciones
Rule 5     cuerpo -> constante
Rule 6     cuerpo -> lectura
Rule 7     cuerpo -> operadores
Rule 8     cuerpo -> operador_logico
Rule 9     cuerpo -> condicion_booleana
Rule 10    cuerpo -> bwhile
Rule 11    cuerpo -> bdo
Rule 12    cuerpo -> bfor
Rule 13    cuerpo -> bforeach
Rule 14    cuerpo -> btry
Rule 15    cuerpo -> operaciones_mat
Rule 16    cuerpo -> condicion_ifelse
Rule 17    cuerpo -> condicion_elseif
Rule 18    cuerpo -> condicion_else
Rule 19    cuerpo -> bswitch
Rule 20    cuerpo -> bcase
Rule 21    cuerpo -> bgoto
Rule 22    cuerpo -> bcolas
Rule 23    cuerpo -> bpila
Rule 24    cuerpo -> incrementos_mat
Rule 25    cuerpo -> bcortes
Rule 26    cuerpo -> brand
Rule 27    cuerpo -> bconcat
Rule 28    cuerpo -> escribir
Rule 29    cuerpo -> btrim
Rule 30    cuerpo -> leer
Rule 31    cuerpo -> boolean_answer
Rule 32    cuerpo -> otros
Rule 33    cuerpo -> breturn
Rule 34    cuerpo -> comment
Rule 35    imprimir -> ECHO valor SEMI
Rule 36    imprimir -> PRINT valor SEMI
Rule 37    imprimir -> PRINT LPAREN valor RPAREN SEMI
Rule 38    imprimir -> ECHO NOMBRE LBRACKET ENTERO RBRACKET SEMI
Rule 39    imprimir -> ECHO bconcat
Rule 40    valor -> numero
Rule 41    valor -> VARIABLE
Rule 42    valor -> STRING
Rule 43    valor -> NOMBRE
Rule 44    valor -> boolean_answer
Rule 45    numero -> ENTERO
Rule 46    numero -> DECIMAL
Rule 47    operadores -> SUMA
Rule 48    operadores -> RESTA
Rule 49    operadores -> MULTIPLICACION
Rule 50    operadores -> DIVISION
Rule 51    operadores -> MODULO
Rule 52    operador_logico -> SMALLER
Rule 53    operador_logico -> GREATER
Rule 54    operador_logico -> IS_SMALLER_OR_EQUAL
Rule 55    operador_logico -> IS_GREATER_OR_EQUAL
Rule 56    incrementos_mat -> MINUS_EQUAL
Rule 57    incrementos_mat -> MOD_EQUAL
Rule 58    incrementos_mat -> MUL_EQUAL
Rule 59    incrementos_mat -> PLUS_EQUAL
Rule 60    boolean_answer -> TRUE
Rule 61    boolean_answer -> FALSE
Rule 62    condicion_if -> IF LPAREN condicion RPAREN LBRACE cuerpo RBRACE
Rule 63    condicion_elseif -> ELSEIF LPAREN condicion RPAREN LBRACE cuerpo RBRACE
Rule 64    condicion_else -> ELSE LBRACE cuerpo RBRACE
Rule 65    condicion_else -> ELSE breturn
Rule 66    condicion_ifelse -> condicion_if
Rule 67    condicion_ifelse -> condicion_if condicion_else
Rule 68    condicion_ifelse -> condicion_if condicion_elseif
Rule 69    condicion_ifelse -> condicion_if condicion_elseif condicion_else
Rule 70    condicion_booleana -> AND
Rule 71    condicion_booleana -> OR
Rule 72    condicion_booleana -> XOR
Rule 73    condicion_booleana -> IS_EQUAL
Rule 74    condicion_booleana -> IS_NOT_EQUAL
Rule 75    condicion_booleana -> IS_IDENTICAL
Rule 76    condicion_booleana -> IS_NOT_IDENTICAL
Rule 77    condicion_booleana -> BOOLEAN_NOT
Rule 78    operaciones_mat -> valor operadores valor
Rule 79    operaciones_mat -> valor operadores operaciones_mat
Rule 80    operaciones_mat -> operaciones_mat_par
Rule 81    operaciones_mat_par -> LPAREN valor operadores valor RPAREN
Rule 82    operaciones_mat_par -> LPAREN valor operadores operaciones_mat_par RPAREN
Rule 83    operaciones_mat_par -> valor operadores operaciones_mat_par
Rule 84    asignacion -> VARIABLE EQUALS valor SEMI
Rule 85    asignacion -> VAR asignacion
Rule 86    asignacion -> proteccion asignacion
Rule 87    asignacion -> VARIABLE EQUALS brand
Rule 88    asignacion -> VARIABLE EQUALS escribir
Rule 89    asignacion -> VARIABLE EQUALS btrim
Rule 90    asignacion -> VARIABLE EQUALS leer
Rule 91    asignacion_array -> VARIABLE EQUALS array_def SEMI
Rule 92    constante -> DEFINE LPAREN STRING COMMA valor RPAREN SEMI
Rule 93    constante -> DEFINE LPAREN NOMBRE COMMA ARRAY RPAREN SEMI
Rule 94    lectura -> READLINE LPAREN STRING RPAREN SEMI
Rule 95    lectura -> READLINE LPAREN RPAREN SEMI
Rule 96    brand -> RAND LPAREN ENTERO COMMA ENTERO RPAREN SEMI
Rule 97    proteccion -> PUBLIC
Rule 98    proteccion -> PRIVATE
Rule 99    proteccion -> PROTECTED
Rule 100   proteccion -> STATIC
Rule 101   funciones -> funcion_nparams
Rule 102   funciones -> proteccion funcion_nparams
Rule 103   funciones -> funcion_blank
Rule 104   funciones -> proteccion funcion_blank
Rule 105   funciones -> funcion_void
Rule 106   param -> VARIABLE
Rule 107   param -> asignacion
Rule 108   funcion_nparams -> FUNCTION NOMBRE LPAREN params_list RPAREN stc_bloque_def
Rule 109   params_list -> params_list COMMA param
Rule 110   params_list -> param
Rule 111   funcion_void -> FUNCTION NOMBRE LPAREN RPAREN COLON VOID LBRACE empty RBRACE
Rule 112   funcion_blank -> FUNCTION NOMBRE LPAREN RPAREN stc_bloque_def
Rule 113   funcion_blank -> FUNCTION NOMBRE LPAREN RPAREN LBRACE empty RBRACE
Rule 114   condicion -> VARIABLE operador_logico VARIABLE
Rule 115   condicion -> valor operador_logico valor
Rule 116   condicion -> VARIABLE operador_logico valor
Rule 117   bwhile -> WHILE LPAREN condicion RPAREN LBRACE stc_bloque RBRACE
Rule 118   bwhile -> WHILE LPAREN condicion RPAREN COLON stc_bloque
Rule 119   bdo -> DO LBRACE cuerpo RBRACE bwhile
Rule 120   bswitch -> SWITCH LPAREN VARIABLE RPAREN LBRACE cuerpo SEMI RBRACE
Rule 121   bcase -> CASE ENTERO COLON
Rule 122   bcolas -> VARIABLE EQUALS NEW SPLQUEUE LPAREN RPAREN SEMI
Rule 123   bfor -> FOR LPAREN asignacion condicion SEMI for_incr RPAREN stc_bloque_def
Rule 124   stc_bloque -> stc_bloque SEMI cuerpo
Rule 125   stc_bloque -> breturn
Rule 126   breturn -> empty
Rule 127   breturn -> RETURN SEMI
Rule 128   breturn -> RETURN NULL SEMI
Rule 129   breturn -> RETURN VARIABLE SEMI
Rule 130   breturn -> RETURN NOMBRE SEMI
Rule 131   breturn -> RETURN boolean_answer SEMI
Rule 132   stc_bloque_def -> LBRACE stc_bloque RBRACE
Rule 133   for_incr -> VARIABLE SUMA SUMA
Rule 134   for_incr -> SUMA SUMA VARIABLE
Rule 135   for_incr -> VARIABLE RESTA RESTA
Rule 136   for_incr -> RESTA RESTA VARIABLE
Rule 137   for_incr -> VARIABLE SUMA EQUALS numero
Rule 138   for_incr -> VARIABLE RESTA EQUALS numero
Rule 139   bforeach -> FOREACH LPAREN VARIABLE AS VARIABLE RPAREN stc_bloque_def
Rule 140   array_def -> ARRAY LPAREN RPAREN
Rule 141   array_def -> ARRAY LPAREN array_elmnt RPAREN
Rule 142   array_elmnt -> array_elmnt COMMA valor
Rule 143   array_elmnt -> valor
Rule 144   btry -> TRY LBRACE stc_bloque_def RBRACE catches
Rule 145   catches -> catches CATCH LPAREN NOMBRE VARIABLE RPAREN stc_bloque_def
Rule 146   catches -> empty
Rule 147   empty -> <empty>
Rule 148   bgoto -> GOTO NOMBRE SEMI
Rule 149   bpila -> VARIABLE EQUALS NEW SPLSTACK LPAREN RPAREN SEMI
Rule 150   bcortes -> EXIT SEMI
Rule 151   bcortes -> BREAK SEMI
Rule 152   bcortes -> DEFAULT SEMI
Rule 153   bcortes -> CONTINUE SEMI
Rule 154   bconcat -> STRING CONCAT STRING SEMI
Rule 155   bconcat -> VARIABLE EQUALS VARIABLE CONCAT VARIABLE SEMI
Rule 156   escribir -> FWRITE LPAREN NOMBRE COMMA STRING RPAREN SEMI
Rule 157   btrim -> TRIM LPAREN NOMBRE LPAREN NOMBRE RPAREN RPAREN SEMI
Rule 158   leer -> READLINE LPAREN STRING RPAREN SEMI
Rule 159   otros -> SMALLER NOMBRE GREATER
Rule 160   comment -> COMENTARIOS
Rule 161   comment -> DOC_COMENTARIOS

Terminals, with rules where they appear

AND                  : 70
ARRAY                : 93 140 141
AS                   : 139
AT                   : 
BOOL                 : 
BOOLEAN_NOT          : 77
BREAK                : 151
CASE                 : 121
CATCH                : 145
CLOSE_TAG            : 
COLON                : 111 118 121
COMENTARIOS          : 160
COMMA                : 92 93 96 109 142 156
CONCAT               : 154 155
CONCAT_EQUAL         : 
CONTINUE             : 153
DECIMAL              : 46
DEFAULT              : 152
DEFINE               : 92 93
DIVISION             : 50
DIV_EQUAL            : 
DO                   : 119
DOC_COMENTARIOS      : 161
DOUBLE               : 
ECHO                 : 35 38 39
ELSE                 : 64 65
ELSEIF               : 63
ENTERO               : 38 45 96 96 121
EQUALS               : 84 87 88 89 90 91 122 137 138 149 155
EXIT                 : 150
FALSE                : 61
FLOAT                : 
FOR                  : 123
FOREACH              : 139
FUNCTION             : 108 111 112 113
FWRITE               : 156
GOTO                 : 148
GREATER              : 53 159
IF                   : 62
INT                  : 
IS_EQUAL             : 73
IS_GREATER_OR_EQUAL  : 55
IS_IDENTICAL         : 75
IS_NOT_EQUAL         : 74
IS_NOT_IDENTICAL     : 76
IS_SMALLER_OR_EQUAL  : 54
LBRACE               : 62 63 64 111 113 117 119 120 132 144
LBRACKET             : 38
LPAREN               : 37 62 63 81 82 92 93 94 95 96 108 111 112 113 117 118 120 122 123 139 140 141 145 149 156 157 157 158
MINUS_EQUAL          : 56
MODULO               : 51
MOD_EQUAL            : 57
MULTIPLICACION       : 49
MUL_EQUAL            : 58
NEW                  : 122 149
NOMBRE               : 38 43 93 108 111 112 113 130 145 148 156 157 157 159
NOT                  : 
NULL                 : 128
OPEN_TAG             : 
OR                   : 71
PLUS_EQUAL           : 59
PRINT                : 36 37
PRIVATE              : 98
PROTECTED            : 99
PUBLIC               : 97
RAND                 : 96
RBRACE               : 62 63 64 111 113 117 119 120 132 144
RBRACKET             : 38
READLINE             : 94 95 158
RESTA                : 48 135 135 136 136 138
RETURN               : 127 128 129 130 131
RPAREN               : 37 62 63 81 82 92 93 94 95 96 108 111 112 113 117 118 120 122 123 139 140 141 145 149 156 157 157 158
SEMI                 : 35 36 37 38 84 91 92 93 94 95 96 120 122 123 124 127 128 129 130 131 148 149 150 151 152 153 154 155 156 157 158
SMALLER              : 52 159
SPLQUEUE             : 122
SPLSTACK             : 149
STATIC               : 100
STRING               : 42 92 94 154 154 156 158
SUMA                 : 47 133 133 134 134 137
SWITCH               : 120
TRIM                 : 157
TRUE                 : 60
TRY                  : 144
VAR                  : 85
VARIABLE             : 41 84 87 88 89 90 91 106 114 114 116 120 122 129 133 134 135 136 137 138 139 139 145 149 155 155 155
VOID                 : 111
WHILE                : 117 118
XOR                  : 72
error                : 

Nonterminals, with rules where they appear

array_def            : 91
array_elmnt          : 141 142
asignacion           : 2 85 86 107 123
asignacion_array     : 3
bcase                : 20
bcolas               : 22
bconcat              : 27 39
bcortes              : 25
bdo                  : 11
bfor                 : 12
bforeach             : 13
bgoto                : 21
boolean_answer       : 31 44 131
bpila                : 23
brand                : 26 87
breturn              : 33 65 125
bswitch              : 19
btrim                : 29 89
btry                 : 14
bwhile               : 10 119
catches              : 144 145
comment              : 34
condicion            : 62 63 117 118 123
condicion_booleana   : 9
condicion_else       : 18 67 69
condicion_elseif     : 17 68 69
condicion_if         : 66 67 68 69
condicion_ifelse     : 16
constante            : 5
cuerpo               : 62 63 64 119 120 124 0
empty                : 111 113 126 146
escribir             : 28 88
for_incr             : 123
funcion_blank        : 103 104
funcion_nparams      : 101 102
funcion_void         : 105
funciones            : 4
imprimir             : 1
incrementos_mat      : 24
lectura              : 6
leer                 : 30 90
numero               : 40 137 138
operaciones_mat      : 15 79
operaciones_mat_par  : 80 82 83
operador_logico      : 8 114 115 116
operadores           : 7 78 79 81 82 83
otros                : 32
param                : 109 110
params_list          : 108 109
proteccion           : 86 102 104
stc_bloque           : 117 118 124 132
stc_bloque_def       : 108 112 123 139 144 145
valor                : 35 36 37 78 78 79 81 81 82 83 84 92 115 115 116 142 143

Parsing method: LALR

state 0

    (0) S' -> . cuerpo
    (1) cuerpo -> . imprimir
    (2) cuerpo -> . asignacion
    (3) cuerpo -> . asignacion_array
    (4) cuerpo -> . funciones
    (5) cuerpo -> . constante
    (6) cuerpo -> . lectura
    (7) cuerpo -> . operadores
    (8) cuerpo -> . operador_logico
    (9) cuerpo -> . condicion_booleana
    (10) cuerpo -> . bwhile
    (11) cuerpo -> . bdo
    (12) cuerpo -> . bfor
    (13) cuerpo -> . bforeach
    (14) cuerpo -> . btry
    (15) cuerpo -> . operaciones_mat
    (16) cuerpo -> . condicion_ifelse
    (17) cuerpo -> . condicion_elseif
    (18) cuerpo -> . condicion_else
    (19) cuerpo -> . bswitch
    (20) cuerpo -> . bcase
    (21) cuerpo -> . bgoto
    (22) cuerpo -> . bcolas
    (23) cuerpo -> . bpila
    (24) cuerpo -> . incrementos_mat
    (25) cuerpo -> . bcortes
    (26) cuerpo -> . brand
    (27) cuerpo -> . bconcat
    (28) cuerpo -> . escribir
    (29) cuerpo -> . btrim
    (30) cuerpo -> . leer
    (31) cuerpo -> . boolean_answer
    (32) cuerpo -> . otros
    (33) cuerpo -> . breturn
    (34) cuerpo -> . comment
    (35) imprimir -> . ECHO valor SEMI
    (36) imprimir -> . PRINT valor SEMI
    (37) imprimir -> . PRINT LPAREN valor RPAREN SEMI
    (38) imprimir -> . ECHO NOMBRE LBRACKET ENTERO RBRACKET SEMI
    (39) imprimir -> . ECHO bconcat
    (84) asignacion -> . VARIABLE EQUALS valor SEMI
    (85) asignacion -> . VAR asignacion
    (86) asignacion -> . proteccion asignacion
    (87) asignacion -> . VARIABLE EQUALS brand
    (88) asignacion -> . VARIABLE EQUALS escribir
    (89) asignacion -> . VARIABLE EQUALS btrim
    (90) asignacion -> . VARIABLE EQUALS leer
    (91) asignacion_array -> . VARIABLE EQUALS array_def SEMI
    (101) funciones -> . funcion_nparams
    (102) funciones -> . proteccion funcion_nparams
    (103) funciones -> . funcion_blank
    (104) funciones -> . proteccion funcion_blank
    (105) funciones -> . funcion_void
    (92) constante -> . DEFINE LPAREN STRING COMMA valor RPAREN SEMI
    (93) constante -> . DEFINE LPAREN NOMBRE COMMA ARRAY RPAREN SEMI
    (94) lectura -> . READLINE LPAREN STRING RPAREN SEMI
    (95) lectura -> . READLINE LPAREN RPAREN SEMI
    (47) operadores -> . SUMA
    (48) operadores -> . RESTA
    (49) operadores -> . MULTIPLICACION
    (50) operadores -> . DIVISION
    (51) operadores -> . MODULO
    (52) operador_logico -> . SMALLER
    (53) operador_logico -> . GREATER
    (54) operador_logico -> . IS_SMALLER_OR_EQUAL
    (55) operador_logico -> . IS_GREATER_OR_EQUAL
    (70) condicion_booleana -> . AND
    (71) condicion_booleana -> . OR
    (72) condicion_booleana -> . XOR
    (73) condicion_booleana -> . IS_EQUAL
    (74) condicion_booleana -> . IS_NOT_EQUAL
    (75) condicion_booleana -> . IS_IDENTICAL
    (76) condicion_booleana -> . IS_NOT_IDENTICAL
    (77) condicion_booleana -> . BOOLEAN_NOT
    (117) bwhile -> . WHILE LPAREN condicion RPAREN LBRACE stc_bloque RBRACE
    (118) bwhile -> . WHILE LPAREN condicion RPAREN COLON stc_bloque
    (119) bdo -> . DO LBRACE cuerpo RBRACE bwhile
    (123) bfor -> . FOR LPAREN asignacion condicion SEMI for_incr RPAREN stc_bloque_def
    (139) bforeach -> . FOREACH LPAREN VARIABLE AS VARIABLE RPAREN stc_bloque_def
    (144) btry -> . TRY LBRACE stc_bloque_def RBRACE catches
    (78) operaciones_mat -> . valor operadores valor
    (79) operaciones_mat -> . valor operadores operaciones_mat
    (80) operaciones_mat -> . operaciones_mat_par
    (66) condicion_ifelse -> . condicion_if
    (67) condicion_ifelse -> . condicion_if condicion_else
    (68) condicion_ifelse -> . condicion_if condicion_elseif
    (69) condicion_ifelse -> . condicion_if condicion_elseif condicion_else
    (63) condicion_elseif -> . ELSEIF LPAREN condicion RPAREN LBRACE cuerpo RBRACE
    (64) condicion_else -> . ELSE LBRACE cuerpo RBRACE
    (65) condicion_else -> . ELSE breturn
    (120) bswitch -> . SWITCH LPAREN VARIABLE RPAREN LBRACE cuerpo SEMI RBRACE
    (121) bcase -> . CASE ENTERO COLON
    (148) bgoto -> . GOTO NOMBRE SEMI
    (122) bcolas -> . VARIABLE EQUALS NEW SPLQUEUE LPAREN RPAREN SEMI
    (149) bpila -> . VARIABLE EQUALS NEW SPLSTACK LPAREN RPAREN SEMI
    (56) incrementos_mat -> . MINUS_EQUAL
    (57) incrementos_mat -> . MOD_EQUAL
    (58) incrementos_mat -> . MUL_EQUAL
    (59) incrementos_mat -> . PLUS_EQUAL
    (150) bcortes -> . EXIT SEMI
    (151) bcortes -> . BREAK SEMI
    (152) bcortes -> . DEFAULT SEMI
    (153) bcortes -> . CONTINUE SEMI
    (96) brand -> . RAND LPAREN ENTERO COMMA ENTERO RPAREN SEMI
    (154) bconcat -> . STRING CONCAT STRING SEMI
    (155) bconcat -> . VARIABLE EQUALS VARIABLE CONCAT VARIABLE SEMI
    (156) escribir -> . FWRITE LPAREN NOMBRE COMMA STRING RPAREN SEMI
    (157) btrim -> . TRIM LPAREN NOMBRE LPAREN NOMBRE RPAREN RPAREN SEMI
    (158) leer -> . READLINE LPAREN STRING RPAREN SEMI
    (60) boolean_answer -> . TRUE
    (61) boolean_answer -> . FALSE
    (159) otros -> . SMALLER NOMBRE GREATER
    (126) breturn -> . empty
    (127) breturn -> . RETURN SEMI
    (128) breturn -> . RETURN NULL SEMI
    (129) breturn -> . RETURN VARIABLE SEMI
    (130) breturn -> . RETURN NOMBRE SEMI
    (131) breturn -> . RETURN boolean_answer SEMI
    (160) comment -> . COMENTARIOS
    (161) comment -> . DOC_COMENTARIOS
    (97) proteccion -> . PUBLIC
    (98) proteccion -> . PRIVATE
    (99) proteccion -> . PROTECTED
    (100) proteccion -> . STATIC
    (108) funcion_nparams -> . FUNCTION NOMBRE LPAREN params_list RPAREN stc_bloque_def
    (112) funcion_blank -> . FUNCTION NOMBRE LPAREN RPAREN stc_bloque_def
    (113) funcion_blank -> . FUNCTION NOMBRE LPAREN RPAREN LBRACE empty RBRACE
    (111) funcion_void -> . FUNCTION NOMBRE LPAREN RPAREN COLON VOID LBRACE empty RBRACE
    (40) valor -> . numero
    (41) valor -> . VARIABLE
    (42) valor -> . STRING
    (43) valor -> . NOMBRE
    (44) valor -> . boolean_answer
    (81) operaciones_mat_par -> . LPAREN valor operadores valor RPAREN
    (82) operaciones_mat_par -> . LPAREN valor operadores operaciones_mat_par RPAREN
    (83) operaciones_mat_par -> . valor operadores operaciones_mat_par
    (62) condicion_if -> . IF LPAREN condicion RPAREN LBRACE cuerpo RBRACE
    (147) empty -> .
    (45) numero -> . ENTERO
    (46) numero -> . DECIMAL

    ECHO            shift and go to state 36
    PRINT           shift and go to state 38
    VARIABLE        shift and go to state 42
    VAR             shift and go to state 43
    DEFINE          shift and go to state 48
    READLINE        shift and go to state 50
    SUMA            shift and go to state 51
    RESTA           shift and go to state 52
    MULTIPLICACION  shift and go to state 53
    DIVISION        shift and go to state 54
    MODULO          shift and go to state 55
    SMALLER         shift and go to state 56
    GREATER         shift and go to state 57
    IS_SMALLER_OR_EQUAL shift and go to state 58
    IS_GREATER_OR_EQUAL shift and go to state 59
    AND             shift and go to state 60
    OR              shift and go to state 61
    XOR             shift and go to state 62
    IS_EQUAL        shift and go to state 63
    IS_NOT_EQUAL    shift and go to state 64
    IS_IDENTICAL    shift and go to state 65
    IS_NOT_IDENTICAL shift and go to state 66
    BOOLEAN_NOT     shift and go to state 67
    WHILE           shift and go to state 68
    DO              shift and go to state 69
    FOR             shift and go to state 70
    FOREACH         shift and go to state 71
    TRY             shift and go to state 72
    ELSEIF          shift and go to state 75
    ELSE            shift and go to state 76
    SWITCH          shift and go to state 77
    CASE            shift and go to state 78
    GOTO            shift and go to state 79
    MINUS_EQUAL     shift and go to state 80
    MOD_EQUAL       shift and go to state 81
    MUL_EQUAL       shift and go to state 82
    PLUS_EQUAL      shift and go to state 83
    EXIT            shift and go to state 84
    BREAK           shift and go to state 85
    DEFAULT         shift and go to state 86
    CONTINUE        shift and go to state 87
    RAND            shift and go to state 88
    STRING          shift and go to state 49
    FWRITE          shift and go to state 89
    TRIM            shift and go to state 90
    TRUE            shift and go to state 91
    FALSE           shift and go to state 92
    RETURN          shift and go to state 94
    COMENTARIOS     shift and go to state 95
    DOC_COMENTARIOS shift and go to state 96
    PUBLIC          shift and go to state 97
    PRIVATE         shift and go to state 98
    PROTECTED       shift and go to state 99
    STATIC          shift and go to state 100
    FUNCTION        shift and go to state 101
    NOMBRE          shift and go to state 40
    LPAREN          shift and go to state 39
    IF              shift and go to state 103
    $end            reduce using rule 147 (empty -> .)
    ENTERO          shift and go to state 41
    DECIMAL         shift and go to state 104

    cuerpo                         shift and go to state 1
    imprimir                       shift and go to state 2
    asignacion                     shift and go to state 3
    asignacion_array               shift and go to state 4
    funciones                      shift and go to state 5
    constante                      shift and go to state 6
    lectura                        shift and go to state 7
    operadores                     shift and go to state 8
    operador_logico                shift and go to state 9
    condicion_booleana             shift and go to state 10
    bwhile                         shift and go to state 11
    bdo                            shift and go to state 12
    bfor                           shift and go to state 13
    bforeach                       shift and go to state 14
    btry                           shift and go to state 15
    operaciones_mat                shift and go to state 16
    condicion_ifelse               shift and go to state 17
    condicion_elseif               shift and go to state 18
    condicion_else                 shift and go to state 19
    bswitch                        shift and go to state 20
    bcase                          shift and go to state 21
    bgoto                          shift and go to state 22
    bcolas                         shift and go to state 23
    bpila                          shift and go to state 24
    incrementos_mat                shift and go to state 25
    bcortes                        shift and go to state 26
    brand                          shift and go to state 27
    bconcat                        shift and go to state 28
    escribir                       shift and go to state 29
    btrim                          shift and go to state 30
    leer                           shift and go to state 31
    boolean_answer                 shift and go to state 32
    otros                          shift and go to state 33
    breturn                        shift and go to state 34
    comment                        shift and go to state 35
    valor                          shift and go to state 37
    proteccion                     shift and go to state 44
    funcion_nparams                shift and go to state 45
    funcion_blank                  shift and go to state 46
    funcion_void                   shift and go to state 47
    operaciones_mat_par            shift and go to state 73
    condicion_if                   shift and go to state 74
    empty                          shift and go to state 93
    numero                         shift and go to state 102

state 1

    (0) S' -> cuerpo .



state 2

    (1) cuerpo -> imprimir .

    $end            reduce using rule 1 (cuerpo -> imprimir .)
    RBRACE          reduce using rule 1 (cuerpo -> imprimir .)
    SEMI            reduce using rule 1 (cuerpo -> imprimir .)


state 3

    (2) cuerpo -> asignacion .

    $end            reduce using rule 2 (cuerpo -> asignacion .)
    RBRACE          reduce using rule 2 (cuerpo -> asignacion .)
    SEMI            reduce using rule 2 (cuerpo -> asignacion .)


state 4

    (3) cuerpo -> asignacion_array .

    $end            reduce using rule 3 (cuerpo -> asignacion_array .)
    RBRACE          reduce using rule 3 (cuerpo -> asignacion_array .)
    SEMI            reduce using rule 3 (cuerpo -> asignacion_array .)


state 5

    (4) cuerpo -> funciones .

    $end            reduce using rule 4 (cuerpo -> funciones .)
    RBRACE          reduce using rule 4 (cuerpo -> funciones .)
    SEMI            reduce using rule 4 (cuerpo -> funciones .)


state 6

    (5) cuerpo -> constante .

    $end            reduce using rule 5 (cuerpo -> constante .)
    RBRACE          reduce using rule 5 (cuerpo -> constante .)
    SEMI            reduce using rule 5 (cuerpo -> constante .)


state 7

    (6) cuerpo -> lectura .

    $end            reduce using rule 6 (cuerpo -> lectura .)
    RBRACE          reduce using rule 6 (cuerpo -> lectura .)
    SEMI            reduce using rule 6 (cuerpo -> lectura .)


state 8

    (7) cuerpo -> operadores .

    $end            reduce using rule 7 (cuerpo -> operadores .)
    RBRACE          reduce using rule 7 (cuerpo -> operadores .)
    SEMI            reduce using rule 7 (cuerpo -> operadores .)


state 9

    (8) cuerpo -> operador_logico .

    $end            reduce using rule 8 (cuerpo -> operador_logico .)
    RBRACE          reduce using rule 8 (cuerpo -> operador_logico .)
    SEMI            reduce using rule 8 (cuerpo -> operador_logico .)


state 10

    (9) cuerpo -> condicion_booleana .

    $end            reduce using rule 9 (cuerpo -> condicion_booleana .)
    RBRACE          reduce using rule 9 (cuerpo -> condicion_booleana .)
    SEMI            reduce using rule 9 (cuerpo -> condicion_booleana .)


state 11

    (10) cuerpo -> bwhile .

    $end            reduce using rule 10 (cuerpo -> bwhile .)
    RBRACE          reduce using rule 10 (cuerpo -> bwhile .)
    SEMI            reduce using rule 10 (cuerpo -> bwhile .)


state 12

    (11) cuerpo -> bdo .

    $end            reduce using rule 11 (cuerpo -> bdo .)
    RBRACE          reduce using rule 11 (cuerpo -> bdo .)
    SEMI            reduce using rule 11 (cuerpo -> bdo .)


state 13

    (12) cuerpo -> bfor .

    $end            reduce using rule 12 (cuerpo -> bfor .)
    RBRACE          reduce using rule 12 (cuerpo -> bfor .)
    SEMI            reduce using rule 12 (cuerpo -> bfor .)


state 14

    (13) cuerpo -> bforeach .

    $end            reduce using rule 13 (cuerpo -> bforeach .)
    RBRACE          reduce using rule 13 (cuerpo -> bforeach .)
    SEMI            reduce using rule 13 (cuerpo -> bforeach .)


state 15

    (14) cuerpo -> btry .

    $end            reduce using rule 14 (cuerpo -> btry .)
    RBRACE          reduce using rule 14 (cuerpo -> btry .)
    SEMI            reduce using rule 14 (cuerpo -> btry .)


state 16

    (15) cuerpo -> operaciones_mat .

    $end            reduce using rule 15 (cuerpo -> operaciones_mat .)
    RBRACE          reduce using rule 15 (cuerpo -> operaciones_mat .)
    SEMI            reduce using rule 15 (cuerpo -> operaciones_mat .)


state 17

    (16) cuerpo -> condicion_ifelse .

    $end            reduce using rule 16 (cuerpo -> condicion_ifelse .)
    RBRACE          reduce using rule 16 (cuerpo -> condicion_ifelse .)
    SEMI            reduce using rule 16 (cuerpo -> condicion_ifelse .)


state 18

    (17) cuerpo -> condicion_elseif .

    $end            reduce using rule 17 (cuerpo -> condicion_elseif .)
    RBRACE          reduce using rule 17 (cuerpo -> condicion_elseif .)
    SEMI            reduce using rule 17 (cuerpo -> condicion_elseif .)


state 19

    (18) cuerpo -> condicion_else .

    $end            reduce using rule 18 (cuerpo -> condicion_else .)
    RBRACE          reduce using rule 18 (cuerpo -> condicion_else .)
    SEMI            reduce using rule 18 (cuerpo -> condicion_else .)


state 20

    (19) cuerpo -> bswitch .

    $end            reduce using rule 19 (cuerpo -> bswitch .)
    RBRACE          reduce using rule 19 (cuerpo -> bswitch .)
    SEMI            reduce using rule 19 (cuerpo -> bswitch .)


state 21

    (20) cuerpo -> bcase .

    $end            reduce using rule 20 (cuerpo -> bcase .)
    RBRACE          reduce using rule 20 (cuerpo -> bcase .)
    SEMI            reduce using rule 20 (cuerpo -> bcase .)


state 22

    (21) cuerpo -> bgoto .

    $end            reduce using rule 21 (cuerpo -> bgoto .)
    RBRACE          reduce using rule 21 (cuerpo -> bgoto .)
    SEMI            reduce using rule 21 (cuerpo -> bgoto .)


state 23

    (22) cuerpo -> bcolas .

    $end            reduce using rule 22 (cuerpo -> bcolas .)
    RBRACE          reduce using rule 22 (cuerpo -> bcolas .)
    SEMI            reduce using rule 22 (cuerpo -> bcolas .)


state 24

    (23) cuerpo -> bpila .

    $end            reduce using rule 23 (cuerpo -> bpila .)
    RBRACE          reduce using rule 23 (cuerpo -> bpila .)
    SEMI            reduce using rule 23 (cuerpo -> bpila .)


state 25

    (24) cuerpo -> incrementos_mat .

    $end            reduce using rule 24 (cuerpo -> incrementos_mat .)
    RBRACE          reduce using rule 24 (cuerpo -> incrementos_mat .)
    SEMI            reduce using rule 24 (cuerpo -> incrementos_mat .)


state 26

    (25) cuerpo -> bcortes .

    $end            reduce using rule 25 (cuerpo -> bcortes .)
    RBRACE          reduce using rule 25 (cuerpo -> bcortes .)
    SEMI            reduce using rule 25 (cuerpo -> bcortes .)


state 27

    (26) cuerpo -> brand .

    $end            reduce using rule 26 (cuerpo -> brand .)
    RBRACE          reduce using rule 26 (cuerpo -> brand .)
    SEMI            reduce using rule 26 (cuerpo -> brand .)


state 28

    (27) cuerpo -> bconcat .

    $end            reduce using rule 27 (cuerpo -> bconcat .)
    RBRACE          reduce using rule 27 (cuerpo -> bconcat .)
    SEMI            reduce using rule 27 (cuerpo -> bconcat .)


state 29

    (28) cuerpo -> escribir .

    $end            reduce using rule 28 (cuerpo -> escribir .)
    RBRACE          reduce using rule 28 (cuerpo -> escribir .)
    SEMI            reduce using rule 28 (cuerpo -> escribir .)


state 30

    (29) cuerpo -> btrim .

    $end            reduce using rule 29 (cuerpo -> btrim .)
    RBRACE          reduce using rule 29 (cuerpo -> btrim .)
    SEMI            reduce using rule 29 (cuerpo -> btrim .)


state 31

    (30) cuerpo -> leer .

    $end            reduce using rule 30 (cuerpo -> leer .)
    RBRACE          reduce using rule 30 (cuerpo -> leer .)
    SEMI            reduce using rule 30 (cuerpo -> leer .)


state 32

    (31) cuerpo -> boolean_answer .
    (44) valor -> boolean_answer .
